--- a/Quantum_Walk_demo.ipynb
+++ b/Quantum_Walk_demo.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 1,
    "id": "76a796fc",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 2,
    "id": "ac91120b",
    "metadata": {},
    "outputs": [],
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 3,
    "id": "c12790fd",
    "metadata": {},
    "outputs": [],
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 4,
    "id": "447196a3",
    "metadata": {},
    "outputs": [],
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 5,
    "id": "40e7980e",
    "metadata": {},
    "outputs": [],
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 6,
    "id": "181696bf",
    "metadata": {},
    "outputs": [],
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 7,
    "id": "a74dc20f",
    "metadata": {},
    "outputs": [
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "e706e061",
    "metadata": {},
    "outputs": [],
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "41f823d1",
    "metadata": {},
    "outputs": [
@@ -493,15 +493,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "List of active qubits: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
-      "List of quantum walk qubits: [0, 1, 2, 3, 4]  size: 5\n",
-      "List of ancilla qubits: [5, 6, 7, 8] size: 4\n",
-      "Coin qubit [9]\n"
+      "List of active qubits: [0, 1, 2, 3, 4, 5, 6]\n",
+      "List of quantum walk qubits: [0, 1, 2, 3]  size: 4\n",
+      "List of ancilla qubits: [4, 5] size: 2\n",
+      "Coin qubit [6]\n"
      ]
     }
    ],
    "source": [
-    "N_REG  = 10\n",
+    "N_REG  = 7\n",
     "ACTIVE = [i for i in range(N_REG)]\n",
     "#ACTIVE = [0, 1, 2, 3, 4]\n",
     "SHOTS  = 100\n",
@@ -513,10 +513,10 @@
     "\n",
     "coin = ACTIVE[-1]\n",
     "\n",
-    "walk_register_size = available_qubits//2\n",
+    "walk_register_size = available_qubits//2 + (0 if available_qubits%2 == 0 else 1)\n",
     "walk_register = ACTIVE[0: walk_register_size]\n",
     "\n",
-    "ancilla_size = walk_register_size -1\n",
+    "ancilla_size = available_qubits - walk_register_size -1\n",
     "ancilla_register = ACTIVE[walk_register_size:available_qubits-1]\n",
     "\n",
     "print(\"List of active qubits:\",ACTIVE)\n",
@@ -524,12 +524,7 @@
     "print(\"List of ancilla qubits:\", ancilla_register, \"size:\", ancilla_size)\n",
     "print(\"Coin qubit\", [coin])\n",
     "\n",
-    "assert(0 <= walk_register_size - ancilla_size <= 1)\n",
-    "\n",
-    "quantum_walk(circuit, walk_register, ancilla_register, coin, n_steps)\n",
-    "\n",
-    "\n",
-    "# circuit.draw()"
+    "assert(1 <= walk_register_size - ancilla_size <= 2)"
    ]
   },
   {
@@ -538,7 +533,10 @@
    "id": "5f79f8cf",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "quantum_walk(circuit, walk_register, ancilla_register, coin, n_steps)\n",
+    "circuit.draw()"
+   ]
   }
  ],
  "metadata": {
