--- a/Quantum_Walk_demo.ipynb
+++ b/Quantum_Walk_demo.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "The concept of a random walk has existed in mathematics for centuries. Consising on a stochastic process by which a variable changes randomly in successive steps, they have applications in computer science, economics, and game theory among others. Their most representative application in physics is in Markovian chains, where they help simulate a large array of phenomena, from atomic interactions, to galaxy dynamics. \n",
     "\n",
-    "In it's most simple version, we can imagine a random walk in one dimension, where a particle located in a chain, moves either to the left, or to the right with equal probability at every time step. With the emergence of quantum information theory and quantum computing, the concept of random walk was extended to quantum systems and quantum walks were defined [cite]. \n",
+    "In it's most simple version, we can imagine a random walk in one dimension, where a particle located in a chain, moves either to the left, or to the right with equal probability at every time step. With the emergence of quantum information theory and quantum computing, the concept of random walk was extended to quantum systems and quantum walks were defined [1]. \n",
     "\n",
     "The first immediate result when studying the random walk described above, is that the proability distribution of finding the classical particle at a given time follows a Gaussian distribution, centered at the origin of the walk. However, as we will see in this notebook, the quantum counterpart behaves quite differently.\n",
     "\n",
@@ -78,6 +78,12 @@
     "\n",
     "[2] D. Meyer. From quantum cellular automata to quantum lattice gases, Journal of Statistica Physics, 85:551-574, 1996. Also quant-ph/9604003.\n",
     "\n",
+    "[3] A. Ambianis. Quantum walks and their algorithmic applications, arXiv:quant-ph/0403120v3\n",
+    "\n",
+    "[4] J. Kempe. Quantum random walks - an introductory overview, Contemporary Physics, 44:307-\n",
+    "327, 2003. Also quant-ph/0303081.\n",
+    "\n",
+    "[5] Venegas-Andraca, S.E. Quantum walks: a comprehensive review. Quantum Inf Process 11, 1015–1106 (2012).\n",
     "[6] A. Childs, E. Farhi, S. Gutmann. An example of the diﬀerence between quantum and classical random walks. Journal of Quantum Information Processing, 1:35, 2002. Also quant-ph/0103020.\n",
     "\n",
     "[7] L. Grover. A fast quantum mechanical algorithm for database search. Proceedings of STOC’96, pp. 212-219, quant-ph/9605043.\n",
@@ -86,7 +92,7 @@
     "\n",
     "[9] A. Ambainis, J. Kempe, A. Rivosh. Coins make quantum walks faster, quant-ph/0402107.\n",
     "\n",
-    "[10]Engel GS, Calhoun TR, Read EL, Ahn TK, Mancal T, Cheng YC et al. (2007). Evidence for wavelike energy transfer through quantum coherence in photosynthetic systems. Nature 446 (7137): 782–6."
+    "[10] Engel GS, Calhoun TR, Read EL, Ahn TK, Mancal T, Cheng YC et al. (2007). Evidence for wavelike energy transfer through quantum coherence in photosynthetic systems. Nature 446 (7137): 782–6."
    ]
   },
   {
@@ -840,14 +846,6 @@
    "source": [
     "plot_result_histogram(positions, \"Classical Random Walk Distribution\", binary= False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "466cb531",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
